--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -103,15 +103,24 @@ a:hover {
   margin-top: 0%;
 }
 
+.rev{
+  color: #D4AF37
+}
+
+.rev_c{
+  color: #D4AF37
+}
+
 #review_dis{
-  background-color: #D4AF37;
+  background-color: black;
   padding: 10px;
   margin-top: 1.5%;
-  margin-left: 2%;
+  color: #D4AF37;
+  border-radius: 10px
 }
 
 #review_row{
-  background-color: #D4AF37;
+  background-color: black;
   padding: 10px;
   margin-top: 5%;
   border-radius: 10px;
