--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -4,64 +4,39 @@
 <div class="row">
   <div class="col-md-6">
     <%= image_tag @product.image(:medium) %> 
+    <h2><%= @product.title %></h2>
   </div>
 
   <div class="col-md-6">
-    <h3><%= @product.title %></h3>
-    <p><em>Price: </em><%= number_to_currency(@product.price) %></p>
-    <p><em>Shipping Price: </em><%= number_to_currency(@product.shipping_cost) %></p>
-    <p><em>Color:</em> <%= @product.color %></p>
-    <p><em>Condition:</em> <%= @product.condition %></p>
-    <p><em>Description:</em> <%= @product.description %></p>
-    <%= link_to @product.user.username, user_path(@product) %>
     
-      <%= link_to "Buy It Now", new_product_order_path(@product), class: "btn btn-primary", data: { no_turbolink: true } %>
+    <p style="font-size: 25px"><em>Price: </em><%= number_to_currency(@product.price) %></p>
+    <p style="font-size: 25px"><em>Shipping Price: </em><%= number_to_currency(@product.shipping_cost) %></p>
+    <p style="font-size: 25px"><em>Color:</em> <%= @product.color %></p>
+    <p style="font-size: 25px"><em>Condition:</em> <%= @product.condition %></p>
+    <p style="font-size: 25px"><em>Description:</em> <%= @product.description %></p>
+    <p style="font-size: 25px"> Seller: <%= link_to @product.user.username, user_path(@product) %></p><br>
     
-    <p class="mt-5">
-                <%= form_tag charges_path do %>
-
-                    <%= hidden_field_tag "product_id", @product.id %>
-                    
-                   
-
-                    <article>
-                      <% if flash[:error].present? %>
-                        <div id="error_explanation">
-                          <p><%= flash[:error] %></p>
-                        </div>
-                      <% end %>
-                    </article>
-
-
-                    <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-                            data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
-                            data-description="NAME: <%= @product.title %>, COLOR: <%= @product.color %> "
-                            data-amount="<%= (@product.price + @product.shipping_cost) * 100 %>"
-                            data-billing-address="true"
-                            data-shipping-address="true"
-                            <% if user_signed_in? %>
-                              data-email="<%= current_user.email %>"
-                            <% end %>
-                            data-allow-remember-me="true"
-                            data-locale="auto">
-
-                    </script>
-                <% end %>
-    </p>
-
+      <%= link_to "Buy It Now", new_product_order_path(@product), class: "btn btn-primary", style: "margin-top: 5%", data: { no_turbolink: true } %>
     
     
-  </div>
-  <div class="row">
-    <div class="col-md-6" id="review_dis">
-      <%= link_to "Add Review", new_product_review_path(@product), :class => "btn btn-primary" %><br>
-       <%= render @product.reviews %>
-    </div>
-  </div>
+  </div> 
+
 
   
 </div>
 
+  <div class="row" >
+
+    <div class="col-md-12" style="margin-top: 5%" id="review_row" >
+        <%= link_to "Add Review", new_product_review_path(@product), :class => "btn btn-primary" %>
+      <div id="review_dis">
+
+            <%= render @product.reviews %>
+      </div>
+      
+ 
+    </div>
+  </div>
 
       <% if user_signed_in? %>
         <% if @product.user.id == current_user.id %>
