cleaning up nice

--- a/app/views/businesses/edit.html.erb
+++ b/app/views/businesses/edit.html.erb
@@ -1,4 +1,8 @@
-<h1>Editing Business</h1>
+<div class="row" align="center">
+	<div class="col-md-12">
+		<h1 style="color: #D4AF37">Edit Business</h1>
+	</div>
+</div>
 
 <%= render 'form', business: @business %>
 
