--- a/app/views/businesses/new.html.erb
+++ b/app/views/businesses/new.html.erb
@@ -1,4 +1,9 @@
-<h1>New Business</h1>
+<div class="row" align="center">
+	<div class="col-md-12">
+		<h1 style="color: #D4AF37">New Business</h1>
+	</div>
+</div>
+
 
 <%= render 'form', business: @business %>
 
