--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -4,14 +4,14 @@
 			How Many Stars: <%= f.select :rating, [1,2,3,4,5], :class => "rev_c", :style => "width: 20px"%>
 		</div>
 
-		<div style="margin-bottom: 15px; color: #D4AF37; ">
+		<div style="margin-bottom: 15px; color: #D4AF37; width: 150px">
 			<%= f.input :comment  %>
 		</div>
 		
 		<br>
 		
 		<br>
-		<%= f.button :submit, :class => "btn btn-primary"%>
+		<%= f.button :submit, :class => "btn", :style => "background-color: #D4AF37; color: black;"%>
 	<% end %>
 </div>
 
