--- a/app/views/businesses/_form.html.erb
+++ b/app/views/businesses/_form.html.erb
@@ -1,68 +1,81 @@
-<%= form_with(model: business, local: true) do |form| %>
-  <% if business.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(business.errors.count, "error") %> prohibited this business from being saved:</h2>
+<div class="container">
+  <div class="row form-group" align="center">
+    <div class="col-md-12" style="background-color: #D4AF37; color: black; border-radius: 10px; padding: 20px">
+      <%= form_with(model: business, local: true) do |form| %>
+        
+        <% if business.errors.any? %>
+          <div id="error_explanation">
+            <h2><%= pluralize(business.errors.count, "error") %> prohibited this business from being saved:</h2>
 
-      <ul>
-      <% business.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+            <ul>
+            <% business.errors.full_messages.each do |message| %>
+              <li><%= message %></li>
+            <% end %>
+            </ul>
+          </div>
+        <% end %>
+
+        <div class="row">
+          <div class="col-md-6">
+            <%= form.label :title %>
+            <%= form.text_field :title, id: :business_title, class: "form-control" %>
+          </div>
+          <div class="col-md-6">
+            <%= form.label :category %>
+            <%= select_tag(:business_category_id, options_for_select(@business_categories), :prompt => "Choose a Category", :class => "form-control") %>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-12">
+            <%= form.label :description %>
+            <%= form.text_area :description, id: :business_description, class: "form-control" %>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-4">
+            <%= form.label :business_address %>
+            <%= form.text_field :address, id: :business_address, class: "form-control" %>
+          </div>
+          <div class="col-md-4">
+            <%= form.label :city %>
+            <%= form.text_field :city, id: :business_city, class: "form-control" %>
+          </div>
+          <div class="col-md-4">
+            <%= form.label :state %>
+            <%= select_tag(:state_id, options_for_select(@states), :prompt => "Choose a State", :class => "form-control") %>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-4">
+            <%= form.label :business_email %>
+            <%= form.text_field :email, id: :business_email, class: "form-control" %>
+          </div>
+          <div class="col-md-4">
+            <%= form.label :business_number %>
+            <%= form.text_field :number, id: :business_number, class: "form-control" %>
+          </div>
+          <div class="col-md-4">
+            <%= form.label :image %>
+            <%= form.file_field :image, class: "form-control" %>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-12">
+            <%= form.label :business_hours %>
+            <%= form.text_area :hours, id: :business_hours, class: "form-control" %>            
+          </div>
+        </div>
+
+        <div class="row">
+          <%= form.submit class: "btn", :style => "background-color: black; color: #D4AF37; margin-top: 10px;" %>
+        </div>
+
       <% end %>
-      </ul>
     </div>
-  <% end %>
-
-  <div class="form-group">
-    <%= form.label :title %>
-    <%= form.text_field :title, id: :business_title, class: "form-control" %>
   </div>
+</div>
 
-  <div class="form-group">
-    <%= form.label :description %>
-    <%= form.text_area :description, id: :business_description, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :category %>
-    <%= select_tag(:business_category_id, options_for_select(@business_categories), :prompt => "Choose a Category", :class => "form-control") %>
-  </div>
-
-
-  <div class="form-group">
-    <%= form.label :business_address %>
-    <%= form.text_field :address, id: :business_address, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :city %>
-    <%= form.text_field :city, id: :business_city, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :state %>
-    <%= select_tag(:state_id, options_for_select(@states), :prompt => "Choose a State", :class => "form-control") %>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :business_email %>
-    <%= form.text_field :email, id: :business_email, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :business_hours %>
-    <%= form.text_area :hours, id: :business_hours, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :business_number %>
-    <%= form.text_field :number, id: :business_number, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :image %>
-    <%= form.file_field :image, class: "form-control" %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
-<% end %>
