--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -1,60 +1,37 @@
+<div class="container">
+  
+<div class="row" align="center">
+  <div class="col-md-4" align="center">
+     <%= image_tag @business.image(:medium), :style => "width: 100%; height: 100%; margin: 5%;" %> 
+     <h2 style="color: #D4AF37;"> <%= @business.title %></h2>
 
-
-  <div class="col-md-6">
-    <%= image_tag @business.image(:medium) %> 
   </div>
+     <div class="col-md-5 pull-right" align="center" style="background-color: #D4AF37; color: black; border-radius: 10px; padding: 15px; margin: 10px">
+       <p style="font-size: 18px"><%= @business.description %></p>
+       <p><strong><%= @business.business_category.name %></strong></p>
+     </div>
+     <div class="col-md-5 pull-right" align="center" style="background-color: #D4AF37; color: black; border-radius: 10px; padding: 15px; font-size: 18px; margin: 10px">
+      
+      <p><strong>Address:</strong><%= @business.address %></p>
+      <p><strong>City:</strong><%= @business.city %></p>
+      <p><strong>State:</strong><%= @business.state.name %></p>
+      <p><strong>Email:</strong><%= @business.email %></p>
+      <p><strong>Hours:</strong><%= @business.hours %></p>
+      <p><strong>Number:</strong><%= @business.number %></p>
+     </div>
+     
+  
+</div>
 
-<p>
-  <strong>Title:</strong>
-  <%= @business.title %>
-</p>
-
-<p>
-  <strong>Description:</strong>
-  <%= @business.description %>
-</p>
-
-<p>
-<%= @business.business_category.name %>
-</p>
-
-<p>
-  <strong>Address:</strong>
-  <%= @business.address %>
-</p>
-
-<p>
-  <strong>City:</strong>
-  <%= @business.city %>
-</p>
-
-<p>
-  <strong>State:</strong>
-  <%= @business.state.name %>
-</p>
-
-<p>
-  <strong>Email:</strong>
-  <%= @business.email %>
-</p>
-
-<p>
-  <strong>Hours:</strong>
-  <%= @business.hours %>
-</p>
-
-<p>
-  <strong>Number:</strong>
-  <%= @business.number %>
-</p>
+</div>
 
 
-<div class="row">
-  <%= link_to 'Back', businesses_path %>
+<div class="row" align="center">
+  <%= link_to 'Back', businesses_path, :style => "color: #D4AF37; font-size: 15px;" %> <span style="color: #D4AF37">|</span>
 
   <% if @business.user_id == current_user.id %>
 
-    <%= link_to 'Edit', edit_business_path(@business) %>
+    <%= link_to 'Edit', edit_business_path(@business), :style => "color: #D4AF37; font-size: 15px;" %>
     
   <% end %>
 
