--- a/app/views/orders/sales.html.erb
+++ b/app/views/orders/sales.html.erb
@@ -16,7 +16,7 @@
       <td class="center" align="center" style="background-color: #D4AF37;"><%= image_tag order.product.image.url(:thumb) %></td>
       <td class="center"><%= order.product.title %></td>
       <td class="center"><%= number_to_currency(order.product.price) %></td>
-      <td class="center"><%= order.buyer.username %></td>
+      <td class="center"><%= order.buyer.username %> Email: <%= order.buyer.email %></td>
       <td class="center"><%= order.created_at.strftime("%B %-d, %Y") %></td>
     </tr>
   <% end %>
