--- a/app/views/products/_form_edit.html.erb
+++ b/app/views/products/_form_edit.html.erb
@@ -1,104 +1,78 @@
 <div class="container">
-  <div class="row bg-white p-4">
-    <div class="col">
-      <%= form_for @product, url: "#{product_path}", html: { multipart: true } do |form| %>
+  <div class="row">
+    <div class="col-md-12" align="center" style="background-color: #D4AF37; color: black; border-radius: 10px; padding: 20px">
+      <%= form_for @product, url: "#{products_path}", html: { multipart: true } do |form| %>
+      
         <% if product.errors.any? %>
           <div id="error_explanation">
-            <h2><%= pluralize(book.errors.count, "error") %> prohibited this product from being saved:</h2>
+            <h2><%= pluralize(product.errors.count, "error") %> prohibited this product from being saved:</h2>
 
             <ul>
-            <% book.errors.full_messages.each do |message| %>
+            <% product.errors.full_messages.each do |message| %>
               <li><%= message %></li>
             <% end %>
             </ul>
           </div>
         <% end %>
 
+        <div id="stripe_error" class="alert alert-danger" style="display:none">
+            <noscript>JavaScript is not enabled and is required for this form. First enable it in your web browser settings.</noscript>
+        </div>
 
-        <div class="form-group">
-          <div class="col-3">
-            <%= form.label :title, class: "font-weight-bold" %>
-          </div>
-          <div class="col-8">
+        <div class="row form-group">
+          <div class="col-md-6">
+            <%= form.label :title, class: "pt-1 font-weight-bold" %>
             <%= form.text_field :title, id: :product_title, class: "form-control" %>
           </div>
-        </div>
-
-        <div class="form-group">
-          <div class="col-3">
-            <%= form.label :price, class: "font-weight-bold" %>
-          </div>
-          <div class="col-8">
-            <%= form.number_field :price, id: :product_price, step: 0.01, class: "form-control" %>
-          </div>
-        </div>
-
-          <div class="form-group">
-             <%= form.label :category %>
+          <div class="col-md-6">
+              <%= form.label :category %>
               <%= select_tag(:category_id, options_for_select(@categories), :prompt => "Choose a Category", :class => "form-control") %>
-         </div>
-
-        <div class="form-group">
-          <div class="col-3">
-            <%= form.label :all_tags, class: "font-weight-bold" %>  <em>(Example: XXXXX, XXXXX)</em>
-          </div>
-          <div class="col-8">
-            <%= form.text_field :all_tags, class: "form-control" %>
           </div>
         </div>
 
-
-        <div class="form-group">
-          <div class="col-3">
-            <%= form.label :shipping_cost, class: "font-weight-bold" %>
-          </div>
-          <div class="form-group">
-            <%= form.number_field :shipping_cost, id: :product_shipping_cost, step: 0.01, class: "form-control" %>
-          </div>
-        </div>
-
-        <div class="form-group">
-          <div class="col-3">
-            <%= form.label :condition, class: "font-weight-bold" %>
-          </div>
-          <div class="col-8">
-            <%= form.text_field :condition, id: :product_condition, class: "form-control" %>
-          </div>
-        </div>
-
-         <div class="form-group mt-3">
-          <div class="col-3">
-            <%= form.label :color, class: "pt-1 font-weight-bold" %>
-          </div>
-          <div class="col-8">
-            <%= form.select :color, ["None", "Red", "Pink", "Yellow", "Orange", "Blue", "Purple", "Brown", "Green", "White", "Grey", "Black", "Gold", "Silver", "Bronze", "Platinum"], multiple: true, class: "form-control" %>
-          </div>
-        </div>
-
-        <div class="form-group">
-          <div class="col-3">
-            <%= form.label :image, class: "font-weight-bold" %>
-          </div>
-          <div class="col-8">
-            <%= form.file_field :image, class: "form-control" %>
-          </div>
-
-        <div class="form-group">
-          <div class="col-3">
-            <%= form.label :description, class: "font-weight-bold" %>
-          </div>
-          <div class="col-8">
+        <div class="row">
+          <div class="col-md-12">
+            <%= form.label :description, class: "pt-1 font-weight-bold" %>
             <%= form.text_area :description, id: :product_description, class: "form-control" %>
           </div>
         </div>
 
-        <div class="form-group">
-          <div class="btn btn-primary">
-            <%= form.submit %>
+        <div class="row">
+          <div class="col-md-6">
+            <%= form.label :price, class: "pt-1 font-weight-bold" %>
+            <%= form.number_field :price, id: :product_price, step: 0.01, class: "form-control" %>
+          </div>
+          <div class="col-md-6">
+            <%= form.label :shipping_cost, class: "pt-1 font-weight-bold" %>
+            <%= form.number_field :shipping_cost, id: :product_shipping_cost, step: 0.01, class: "form-control" %>
           </div>
         </div>
-      <% end %>
 
+        <div class="row form-group">
+          <div class="col-md-3" style="margin-top: 28px;">
+            <%= form.label :condition, class: "pt-1 font-weight-bold" %>
+            <%= form.select :condition, ["New", "Fair", "Old", "Antique"], class: "form-control" %>
+          </div>
+          <div class="col-md-3" style="margin-top: 28px;">
+            <%= form.label :color, class: "pt-1 font-weight-bold" %>
+            <%= form.select :color, ["None", "Red", "Pink", "Yellow", "Orange", "Blue", "Purple", "Brown", "Green", "White", "Grey", "Black", "Gold", "Silver", "Bronze", "Platinum"], multiple: true, class: "form-control" %>
+          </div>
+          <div class="col-md-3" style="margin-top: 28px;">
+            <%= form.label :size, class: "pt-1 font-weight-bold" %>
+            <%= form.select :size, ["Infant/New Born", "0-6 Months","Toddler", "X-SMALL", "SMALL", "MEDIUM", "LARGE", "X-LARGE", "XX-LARGE", "XXX-LARGE"], multiple: true, class: "form-control" %>
+          </div>
+          <div class="col-md-3">
+            <%= form.label :image %>
+            <%= form.file_field :image, class: "form-control" %>
+          </div>
+        </div>
+
+        <div class="row" align="center">
+          <%= form.submit :class => "btn", :style => "background-color: black; color: #D4AF37" %>
+        </div>
+
+      <% end %>
     </div>
   </div>
 </div>
+
