--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,9 +1,9 @@
-<div class="container">
-  <div class="row m-5">
-    <div class="col text-center font-heading">
-      <h1>Editing Product</h1>
-    </div>
-  </div>
+<div class="row" align="center">
+	<div class="col-md-12">
+		<h1 style="color: #D4AF37">Edit Product</h1>
+	</div>
+</div>
+
 
 
   <%= render 'form_edit', product: @product %>
