--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,9 +1,9 @@
-<div class="container">
-  <div class="row m-5">
-    <div class="col text-center font-heading">
-      <h1>New product</h1>
-    </div>
-  </div>
+<div class="row" align="center">
+	<div class="col-md-12">
+		<h1 style="color: #D4AF37">New Product</h1>
+	</div>
+</div>
+
 
 <%= render 'form_new', product: @product %>
 
