--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
 	<div class="col-md-12 center" align="center" id="review_row">
 
-		<h1> New Review </h1>
+		<h1 style="color:  #D4AF37"> New Review </h1>
 
 		<div>
 			<%= render 'form' %>
