--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,70 +1,58 @@
-<div class="container">
-  <div class="row" style="margin-top: 7%;">
-   
-      <div class="col-md-12" align="center">
-
-          <% if @user.id == current_user.id %>
-            <%= image_tag @user.image(:medium), id: "profile_pic" %> 
-            <h2>Hey <%= @user.username %>!<h2>
-            <!-- <#= link_to " Conversations", conversations_path %> -->
-            <% else %>
-            <%= image_tag @user.image(:medium), id: "profile_pic" %> 
-            <strong><h3><%= @user.username %>'s Profile</h3></strong>
-            <!-- <#= link_to "Message", new_conversation_path(@user) %> -->
-          <% end %>
-            <div style="background-color: #D4AF37; border-radius: 10px; color: black;">
-                  <div>
-                    <h4>Followers</h4>
-                    <%= @user.followers_count %>
-                  </div>
-                  <div style="font-size: 15px">
-                    <%= link_to('Follow', follow_user_path(@user), method: :post) %>
-                    <%= link_to('Unfollow', unfollow_user_path(@user), method: :post) %>
-                  </div>
-                </div>
-
-             <div class="row">
-                <div class="col text-center pt-3" >
-                  <h4 ><strong>Bio</strong></h4>
-                  <p class="font-small" style="width: 20%"><%= @user.bio %></p>
-                </div>
-
-
-              </div>  
+  <!-- ################# Bio ################# -->
+<div class="row">
+  <div class="col-md-4" align="center">
+    <div>
+        <% if @user.id == current_user.id %>
+          <%= image_tag @user.image(:medium), id: "profile_pic" %> 
+          <h2 style="color: #D4AF37">&nbsp Hello <%= @user.username %>!<h2>
+          <!-- <#= link_to " Conversations", conversations_path %> -->
+          <% else %>
+          <%= image_tag @user.image(:medium), id: "profile_pic" %> 
+          <strong><h3><%= @user.username %>'s Profile</h3></strong>
+          <!-- <#= link_to "Message", new_conversation_path(@user) %> -->
+        <% end %>
+    </div>
+    <div style="background-color: #D4AF37; border-radius: 10px; color: black;">
+      <div align="center">
+        <h4>&nbsp Followers</h4>
+        <h4><%= @user.followers_count %></h4>
       </div>
-
-
-        
-      
-   
+      <div style="font-size: 20px;">
+        &nbsp &nbsp <%= link_to('Follow', follow_user_path(@user), :style => "color: black;", method: :post) %>
+        | <%= link_to('Unfollow', unfollow_user_path(@user), :style => "color: black;", method: :post) %>
+      </div>
+    </div>
   </div>
 
+  <div class="col-md-6 pull-right" style="color: #D4AF37">
+    <h3><strong>Bio</strong></h3>
+    <p class="" style="font-size: 15px"><%= @user.bio %></p>
+  </div>
+</div>
 
-
-  <!-- if current user show "connect with stripe button, otherwise show "message reader" button -->
- 
-
-
-<div class="row" style="margin-top: 5%" align="center">
   <!-- ################# Business ################# -->
-    <% if @user.id == current_user.id %>
-      <h3 class="font-heading text-center">My Business</h3>
-      <% else %>
-      <h3 class="font-heading text-center"><%= @user.username %>'s Business</h3>
-    <% end %>
 
+<div class="row" style="margin-top: 5%; color: #D4AF37;" align="center">
+  <% if @user.id == current_user.id %>
+    <h2 class="font-heading text-center">My Business</h2>
+    <% else %>
+    <h3 class="font-heading text-center"><%= @user.username %>'s Business</h3>
+  <% end %>
+</div>  
+<div class="row" align="center">
+  <div class="col-md-12">
     <% @businesses.each do |business| %>
       <% if business.user.id == @user.id %>
 
           <div class="col-md-12" align="center">
-            <%= image_tag business.image.url(:medium), class: "product-overview-image" %>
-                <h4 class="font-heading pt-2">
+            <%= image_tag business.image.url(:medium), class: "product-overview-image", style: "width: 400px; height: 400px;" %>
+                <h2 style="color: #D4AF37;">
                   <%= business.title %>
-                </h4>
-            <%= link_to "View Details", business, target: "_blank", class: "btn-blue btn font-white mt-5", :method => :get %>
+                </h2>
+            <%= link_to "View Details", business, target: "_blank", class: "btn", style: "background-color: black; color: #D4AF37;", :method => :get %>
             <% if @user.id == current_user.id %>
               <div class="btn-group">
-                <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+                <button type="button" class="btn" style="background-color: #D4AF37; color: black;" data-toggle="dropdown">
                   Action <span class="caret"></span>
                 </button>
                 <ul class="dropdown-menu" role="menu">
@@ -79,79 +67,79 @@
               
       <% end %>
     <% end %>
+  </div>
 </div>
 
-<div class="row" style="margin-top: 5%">
+<!-- ################## Product ################### -->
+
+<div class="row" style="color: #D4AF37">
     <% if @user.id == current_user.id %>
       <h3 class="font-heading text-center">My Products</h3>
-      <h4><em><strong>Please Remember to Check/Send for Tracking Numbers Within 48 hours of Every Sale/Purchase Within your email or stripe account. <em>Customers Email should be located within stripe!</em></strong></em></h4>
+      <h4><em><strong>Please Remember to Check/Send for Tracking Numbers Within 48 hours of Every Sale Within your Black Woman Is God Account. <em>Customers contact information will be located within your <%= link_to "Sales", sales_path(@user) %> page!</em></strong></em></h4>
       <% else %>
       <h3 class="font-heading text-center"><%= @user.username %>'s Products</h3>
     <% end %>
-
-      <% if @user.provider == nil %>
-          
-          <% if @user.id == current_user.id %>
-            <div class="panel panel-default">
-              <div class="panel-header text-center">
-                <h4>
-                  You wont be able to sell items until you register with Stripe!
-                </h4>
-              </div>
-              <div class="panel-body text-center">
-                <%= link_to 'Connect', stripe_url, class: 'btn btn-lg btn-info', target: '_blank' %>
-              </div>
-            </div>
-          <% end %>  
-
+      
+    <% if @user.provider == nil %>
         
-      <% end %>
+        <% if @user.id == current_user.id %>
+          <div class="panel" style="background-color: black">
+            <div class="panel-header text-center">
+              <h4>
+                You wont be able to sell items until you register with Stripe!
+              </h4>
+            </div>
+            <div class="panel-body text-center">
+              <%= link_to 'Connect', stripe_url, class: 'btn btn-lg', style: 'background-color: #D4AF37; color: black;', target: '_blank' %>
+            </div>
+          </div>
+        <% end %>  
+
+      
+    <% end %>
+
 </div>
 
-<div class="row" id="prod_row" style="margin-top: 2%">
-  <!-- ################# Products ################# -->
-  <% @products.each do |product| %>
-    <div id="t_backdrop" >
-      <div class="col-md-12 center"   align="center">
+<div class="row" style="margin-top: 5%">
+  <div class="col-md-12">
+    <% @products.each do |product| %>
+      <% if product.user.id == @user.id %>
+        
 
-        <div class="col-md-3" id="thumbnail_p" style="background-color: white; padding: 2%" align="center">
-           <% if product.user.id == @user.id %>
+              <div  id="t_backdrop">
+                  <div class="col-md-3" style=" height: 100% !important" align="center">
+                      <div class="thumbnail" style="height: 60% !important;">
+                       
+                            <div style="height: 200px; width: 200px; opacity: 0.88; padding: 15px; background-color: #D4AF37; border-radius: 5px">
+                                <div style=" height: 110% !important">
+                                  <%= image_tag(product.image.url(:thumb), :class => "thumbs", :id => "thumbs") %>
+                                </div>
+                            </div>
 
-              <%= image_tag product.image.url(:thumb), class: "product-overview-image" %>
-
-              <h4 class="font-heading pt-2">
-                      <%= product.title %>
-              </h4>
-
-              <p>
-                      <%= product.price %>
-              </p>
-
-              <%= link_to "View Details", product, target: "_blank", class: "btn-blue btn font-white mt-5", :method => :get %>
-
-              <div class="btn-group">
-                    <% if @user.id == current_user.id %>
-                    <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
-                      Action <span class="caret"></span>
-                    </button>
-                     
-                    <ul class="dropdown-menu" role="menu">
-                          <li><%= link_to "Edit", edit_product_path(product), class: "btn btn-link" %></li>
-                          <li><%= link_to 'Destroy', product, method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-link" %></li>
-                    <% end %>
-                    </ul>
-              </div>
-       
-                  
-            <% end %>
-        </div>
-     
-
-      </div>
-    </div>
-  <% end %>
-</div> 
+                   
+                          <div class="caption" style=" width: 200px; height: 200px; padding: 3%; word-wrap: break-word; color: #D4AF37 !important; font-size: 17px; opacity: 0.85; text-overflow: ellipsis;" >
+                            <h4><%= product.title %></h4>
+                            <h3><strong><%= number_to_currency(product.price) %></strong></h3>
+                            <p><%= link_to product.category.name, category_path(product.category), :style => "color: #D4AF37" %></p>
+                              <div class="btn-group">
+                                    <% if @user.id == current_user.id %>
+                                    <button type="button" class="btn dropdown-toggle" style="background-color: #D4AF37; color: black;" data-toggle="dropdown">
+                                      Action <span class="caret"></span>
+                                    </button>
+                                     
+                                    <ul class="dropdown-menu" role="menu">
+                                          <li><%= link_to "Edit", edit_product_path(product), class: "btn btn-link" %></li>
+                                          <li><%= link_to 'Destroy', product, method: :delete, data: { confirm: "Are you sure? Once you delete your product, you will not be able to get it back!" }, class: "btn btn-link" %></li>
+                                    <% end %>
+                                    </ul>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+              </div> 
 
 
-
-
+      <% end %> 
+    <% end %>  
+  </div>
+</div>
