--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,6 +1,6 @@
-  <div class="form-group">
-      <%= render 'search_form' %>
-    </div>
+<div class="row">
+   <%= link_to '< Back', products_path, :style => "color: #D4AF37; font-size: 20px;" %> <span style="color: #D4AF37">|</span>
+</div>
 <div class="row">
   <div class="col-md-6" align="center">
     <%= image_tag @product.image(:medium), style: "width: 45%; height: 45%;" %>
