--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -23,22 +23,27 @@
 	</div>
 
 	<div class="col-md-4">
-		<div class="row" style="margin-top: 3%;">
+<!-- 		<div class="row" style="margin-top: 3%;">
 			<div class="form-group">
 				<h4 style="color: #D4AF37">Search A Business:</h4>	
-				<%= render 'search_form' %>
+				<#%= render 'search_form' %>
 			</div>
-		</div>
+		</div> -->
 
 		<hr style="color: #D4AF37">
 
-		<h4 style="color: #D4AF37">
-			Filter Results:
-		</h4><br>
+
 
 		<div>
 			<%= form_tag businesses_path, method: 'get' do %>
 				<div class="form-group" style="color: #D4AF37">
+					<h4>Search A Business:</h4>
+					<%= text_field_tag :find, params[:find], class: "form-control" %>
+					<br>
+					<br>
+					<h4 style="color: #D4AF37">Filter Results:</h4>
+					<br>
+					<br>
 					<%= label_tag :business_category %>
 				  	<%= select_tag(:business_category, options_from_collection_for_select(BusinessCategory.all, :id, :name, params[:business_category]), { include_blank: true }) %>
 					<br>
@@ -47,7 +52,7 @@
 				  	<%= select_tag(:state, options_from_collection_for_select(State.all, :id, :name, params[:state]), { include_blank: true }) %>
 					<br>
 					<br>
-					<%= submit_tag "submit", :name => nil, :class => "btn btn-primary", :style => "background-color: #D4AF37; color: black;" %>  
+					<%= submit_tag "Search", :name => nil, :class => "btn btn-primary", :style => "background-color: #D4AF37; color: black;" %>  
 				</div>
 
 				     
