--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,4 +1,7 @@
-<h1>New order</h1>
+<div align="center" style="color: #D4AF37; margin: 2%">
+	<h2><strong>Place Your Order For:</strong><br> <%= @product.title %></h2>
+</div>
+
 
 
 
