--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -1,12 +1,12 @@
 <div class="row">
-  <div class="col-md-4">
-    <div class="thumbnail">
-      <%= image_tag @product.image.url %>
+  <div class="col-md-4" style="color: #D4AF37" align="center">
+    <div>
+      <%= image_tag @product.image.url, style: "width: 80%; height: 80%;" %>
     </div>
     <h3><%= @product.title %></h3>
     <h4><%= number_to_currency(@product.price) %></h4>
   </div>
-  <div class="col-md-8">
+  <div class="col-md-5 pull-right">
 
 
    <%= form_for([@product, @order], :html => {id: "order_form"})  do |f| %>
@@ -44,21 +44,27 @@
             <noscript>JavaScript is not enabled and is required for this form. First enable it in your web browser settings.</noscript>
           </div>
 
+          <h3 style="color: #D4AF37;">Please Enter Your Shipping Address:</h3>
+
           <div class="form-group">
-            <%= f.label :address %>
+            <%= f.label :address, :style => "color: #D4AF37;" %>
             <%= f.text_field :address, class: "form-control" %>
           </div>
           <div class="form-group">
-            <%= f.label :city %>
+            <%= f.label :city, :style => "color: #D4AF37;" %>
             <%= f.text_field :city, class: "form-control" %>
           </div>
           <div class="form-group">
-            <%= f.label :state %>
+            <%= f.label :state, :style => "color: #D4AF37;" %>
             <%= f.text_field :state, class: "form-control" %>
           </div>
           <div class="form-group">
-            <%= f.label :zip %>
+            <%= f.label :zip, :style => "color: #D4AF37;" %>
             <%= f.text_field :zip, class: "form-control" %>
+          </div>
+          <div class="form-group">
+            <%= f.label :country, :style => "color: #D4AF37;" %>
+            <%= f.country_select :country, {priority_countries: ["US"], include_blank: "select country"}, class: 'form-control' %>
           </div>
 
 
@@ -75,50 +81,6 @@
                     </script>
               
  <% end %>
-          <script src="https://checkout.stripe.com/checkout.js"></script>
-
-<!--          <#%= form_tag charges_path(product_id: @product.id), class: 'order_form' do %> -->
-
-
-<!-- 
-          <script>
-              var handler = StripeCheckout.configure({
-                key: "<#%= Rails.configuration.stripe[:publishable_key] %>",
-                image: 'https://stripe.com/img/documentation/checkout/marketplace.png',
-                locale: 'auto',
-                token: function(token, args) {
-
-
-                    // token.id = document.getElementById("stripeToken");
-                    // token.email = document.getElementById("stripeEmail");
-                    $("#stripeToken").val(token.id);
-                    $("#stripeEmail").val(token.email);
-                    // document.getElementById("chargeForm").submit().preventDefault();
-                    document.getElementById("order_form").submit().preventDefault();
-                  // You can access the token ID with `token.id`.
-                  // Get the token ID to your server-side code for use.
-                }
-              });
-
-              document.getElementById('new_order').addEventListener('submit', function(e) {
-                // Open Checkout with further options:
-                handler.open({
-                  description: "NAME: <%= @product.title %>",
-                  amount: <#%= (@product.price + @product.shipping_cost) * 100 %>
-                });
-                e.preventDefault();
-
-              });
-
-              // Close Checkout on page navigation:
-              window.addEventListener('popstate', function() {
-                handler.close();
-                // document.getElementById("new_order").submit();
-              });
-          </script> -->
-      
-     
-<!--      <#% end %> -->
-
+    <script src="https://checkout.stripe.com/checkout.js"></script>
   </div>
 </div>
