--- a/app/views/orders/sales.html.erb
+++ b/app/views/orders/sales.html.erb
@@ -2,12 +2,14 @@
   <h2>Your Sales History:</h2>
 </div>
 
-<table class="table">
+<table class="table" align="center">
   <tr style="color: #D4AF37; font-size: 20px" align="center">
     <th class="center">Image</th>
     <th class="center">Item</th>
     <th class="center">Price</th>
+    <th class="center">Shipping Cost </th>
     <th class="center">Customer</th>
+    <th class="center">Customer Shipping Information</th>
     <th class="center">Date Sold</th>
   </tr>
 
@@ -16,8 +18,11 @@
       <td class="center" align="center" style="background-color: #D4AF37;"><%= image_tag order.product.image.url(:thumb) %></td>
       <td class="center"><%= order.product.title %></td>
       <td class="center"><%= number_to_currency(order.product.price) %></td>
+      <td class="center"><%= number_to_currency(order.product.shipping_cost) %></td>
       <td class="center"><%= order.buyer.username %> Email: <%= order.buyer.email %></td>
+      <td class="center"><strong>Address:</strong> <%= order.address %><br> <strong>City:</strong> <%= order.city %><br> <strong>State:</strong> <%= order.state %><br> <strong>Zip:</strong> <%= order.zip %><br> <strong>Country:</strong> <%= order.country %>  </td>
       <td class="center"><%= order.created_at.strftime("%B %-d, %Y") %></td>
+
     </tr>
   <% end %>
 </table>
