--- a/app/views/products/_form_new.html.erb
+++ b/app/views/products/_form_new.html.erb
@@ -20,13 +20,17 @@
         </div>
 
         <div class="row form-group">
-          <div class="col-md-6">
+          <div class="col-md-4">
             <%= form.label :title, class: "pt-1 font-weight-bold" %>
             <%= form.text_field :title, id: :product_title, class: "form-control" %>
           </div>
-          <div class="col-md-6">
-              <%= form.label :category %>
-              <%= select_tag(:category_id, options_for_select(@categories), :prompt => "Choose a Category", :class => "form-control") %>
+          <div class="col-md-4">
+            <%= form.label :category %>
+            <%= select_tag(:category_id, options_for_select(@categories), :prompt => "Choose a Category", :class => "form-control") %>
+          </div>
+          <div class="col-md-4">
+            <%= form.label :image %>
+            <%= form.file_field :image, class: "form-control" %>
           </div>
         </div>
 
@@ -38,38 +42,56 @@
         </div>
 
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-md-4">
+            <%= form.label :condition, class: "pt-1 font-weight-bold" %><br><br>
+            <%= form.select :condition, ["New", "Fair", "Old", "Antique"], class: "form-control" %>
+          </div>
+          <div class="col-md-4">
             <%= form.label :price, class: "pt-1 font-weight-bold" %>
             <%= form.number_field :price, id: :product_price, step: 0.01, class: "form-control" %>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-4">
             <%= form.label :shipping_cost, class: "pt-1 font-weight-bold" %>
             <%= form.number_field :shipping_cost, id: :product_shipping_cost, step: 0.01, class: "form-control" %>
           </div>
         </div>
 
-        <div class="row form-group">
-          <div class="col-md-3" style="margin-top: 28px;">
-            <%= form.label :condition, class: "pt-1 font-weight-bold" %>
-            <%= form.select :condition, ["New", "Fair", "Old", "Antique"], class: "form-control" %>
-          </div>
-          <div class="col-md-3" style="margin-top: 28px;">
-            <%= form.label :color, class: "pt-1 font-weight-bold" %>
-            <%= form.select :color, ["None", "Red", "Pink", "Yellow", "Orange", "Blue", "Purple", "Brown", "Green", "White", "Grey", "Black", "Gold", "Silver", "Bronze", "Platinum"], multiple: true, class: "form-control" %>
-          </div>
-          <div class="col-md-3" style="margin-top: 28px;">
-            <%= form.label :size, class: "pt-1 font-weight-bold" %>
-            <%= form.select :size, ["Infant/New Born", "0-6 Months","Toddler", "X-SMALL", "SMALL", "MEDIUM", "LARGE", "X-LARGE", "XX-LARGE", "XXX-LARGE"], multiple: true, class: "form-control" %>
-          </div>
-          <div class="col-md-3">
-            <%= form.label :image %>
-            <%= form.file_field :image, class: "form-control" %>
-          </div>
+<hr>
+        <div>
+          <h4>Add the available color, sizes on hand for that color, and stock quantity for each size of your product. </h4>
+        
+          <%= form.fields_for :color_variants do |builder| %>
+              <div class="row" align="center">
+                 <%= render 'color_variant_fields', form: builder %>             
+              </div>
+
+          <% end %>
+
+          <%= link_to_add_fields "Add Color", form, :color_variants %>
         </div>
+
+        
+         
+
+
+
+<!--           <div class="col-md-3" style="margin-top: 28px;">
+            <%#= form.label :color, class: "pt-1 font-weight-bold" %>
+            <%#= form.select :color, ["None", "Red", "Pink", "Yellow", "Orange", "Blue", "Purple", "Brown", "Green", "White", "Grey", "Black", "Gold", "Silver", "Bronze", "Platinum"], multiple: true, class: "form-control" %>
+          </div>
+          <div class="col-md-3" style="margin-top: 28px;">
+            <%#= form.label :size, class: "pt-1 font-weight-bold" %>
+            <%#= form.select :size, ["Infant/New Born", "0-6 Months","Toddler", "X-SMALL", "SMALL", "MEDIUM", "LARGE", "X-LARGE", "XX-LARGE", "XXX-LARGE"], multiple: true, class: "form-control" %>
+          </div> -->
+        
 
         <div class="row" align="center">
           <%= form.submit :class => "btn", :style => "background-color: black; color: #D4AF37" %>
         </div>
+      
+      </div>
+
+
 
       <% end %>
     </div>
