--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -7,5 +7,5 @@
 
 <%= render 'form_new', product: @product %>
 
-<%#= link_to 'Back', books_path %>
+<%= link_to 'Back', products_path, :style => "color: #D4AF37;" %>
 </div>
