inventory works! ugly marker on show, need to factor into orders, create quantity for orders

--- a/app/views/products/_color_variant_fields.html.erb
+++ b/app/views/products/_color_variant_fields.html.erb
@@ -19,7 +19,7 @@
 
 		<%= form.simple_fields_for :size_variants do |builder| %>
 		  <div class="row">
-		  			  <%= render 'size_variant_fields', f: builder %>
+		  			  <%= render 'size_variant_fields', form: builder %>
 		  </div>
 
 
