--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -14,7 +14,7 @@
 
   <div class="col-md-6" style="background-color: #D4AF37; padding: 20px; border-radius: 10px; color: black;" align="center">
     
-    <p style="font-size: 25px"><em>Color:</em> <%= @product.color %></p>
+   
     <p style="font-size: 25px"><em>Condition:</em> <%= @product.condition %></p>
     <div style="background-color: black; padding: 4%; margin: 2%; border-radius: 10px;">
           <p style="font-size: 25px; color: #D4AF37"><em>Description:</em> <%= @product.description %></p>
@@ -22,7 +22,7 @@
 
     <div>
       <%= @product.color_variants.each do |color_variant| %>
-          <%= color_variant.try(:color) %>
+          <%= color_variant.color %>
           <ul>
             <% color_variant.size_variants.each do |size_variant| %>
               <li><%= size_variant.try(:size) %></li>
