--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -25,8 +25,7 @@
           <%= color_variant.color %>
           <ul>
             <% color_variant.size_variants.each do |size_variant| %>
-              <li><%= size_variant.try(:size) %></li>
-              <li><%= size_variant.try(:quantity) %></li>
+              <li><%= size_variant.try(:size) %> (<%= size_variant.try(:quantity) %> Left) </li>
             <% end %>
           </ul>
       <% end %>
