--- a/app/views/products/_size_variant_fields.html.erb
+++ b/app/views/products/_size_variant_fields.html.erb
@@ -1,17 +1,17 @@
 <fieldset>
 	<div class="col-md-3">
-		<%= form.label :size %><br><br>
-  		<%= form.select :size, ["Infant/New Born", "0-6 Months","Toddler", "X-SMALL", "SMALL", "MEDIUM", "LARGE", "X-LARGE", "XX-LARGE", "XXX-LARGE"], class: "form-control" %>
+		<%= f.label :size %><br><br>
+  		<%= f.select :size, ["Infant/New Born", "0-6 Months","Toddler", "X-SMALL", "SMALL", "MEDIUM", "LARGE", "X-LARGE", "XX-LARGE", "XXX-LARGE"], class: "form-control" %>
 	</div>
 
 	<div class="col-md-3">
-		<%= form.label :quantity %>
-  		<%= form.number_field :quantity, step: 1.00, class: "form-control" %>
+		<%= f.label :quantity %>
+  		<%= f.number_field :quantity, step: 1.00, class: "form-control" %>
 	</div>
 
 	<div>
-		<%= form.hidden_field :_destroy %>
-  		<%= link_to "remove", '#', class: "remove_fields" %>
+	<!-- 	<#%= form.hidden_field :_destroy %> -->
+  	<%= link_to_remove_association "Remove Size", f, class: "btn btn-danger" %>
 	</div>
 
 </fieldset>
