--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -70,7 +70,7 @@
 
                     <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
                             data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
-                            data-description="NAME: <%= @product.title %>, COLOR: <%= @product.color %> "
+                            data-description="NAME: <%= @product.title %>"
                             data-amount="<%= (@product.price + @product.shipping_cost) * 100 %>"
                             <% if user_signed_in? %>
                               data-email="<%= current_user.email %>"
