--- a/app/views/products/_form_new.html.erb
+++ b/app/views/products/_form_new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12" align="center" style="background-color: #D4AF37; color: black; border-radius: 10px; padding: 20px">
-      <%= form_for @product, url: "#{products_path}", html: { multipart: true } do |form| %>
+      <%= form_for @product, url: "#{products_path}", html: { multipart: true } do |f| %>
       
         <% if product.errors.any? %>
           <div id="error_explanation">
@@ -21,63 +21,63 @@
 
         <div class="row form-group">
           <div class="col-md-4">
-            <%= form.label :title, class: "pt-1 font-weight-bold" %>
-            <%= form.text_field :title, id: :product_title, class: "form-control" %>
+            <%= f.label :title, class: "pt-1 font-weight-bold" %>
+            <%= f.text_field :title, id: :product_title, class: "form-control" %>
           </div>
           <div class="col-md-4">
-            <%= form.label :category %>
+            <%= f.label :category %>
             <%= select_tag(:category_id, options_for_select(@categories), :prompt => "Choose a Category", :class => "form-control") %>
           </div>
           <div class="col-md-4">
-            <%= form.label :image %>
-            <%= form.file_field :image, class: "form-control" %>
+            <%= f.label :image %>
+            <%= f.file_field :image, class: "form-control" %>
           </div>
         </div>
 
         <div class="row">
           <div class="col-md-12">
-            <%= form.label :description, class: "pt-1 font-weight-bold" %>
-            <%= form.text_area :description, id: :product_description, class: "form-control" %>
+            <%= f.label :description, class: "pt-1 font-weight-bold" %>
+            <%= f.text_area :description, id: :product_description, class: "form-control" %>
           </div>
         </div>
 
         <div class="row">
           <div class="col-md-4">
-            <%= form.label :condition, class: "pt-1 font-weight-bold" %><br><br>
-            <%= form.select :condition, ["New", "Fair", "Old", "Antique"], class: "form-control" %>
+            <%= f.label :condition, class: "pt-1 font-weight-bold" %><br><br>
+            <%= f.select :condition, ["New", "Fair", "Old", "Antique"], class: "form-control" %>
           </div>
           <div class="col-md-4">
-            <%= form.label :price, class: "pt-1 font-weight-bold" %>
-            <%= form.number_field :price, id: :product_price, step: 0.01, class: "form-control" %>
+            <%= f.label :price, class: "pt-1 font-weight-bold" %>
+            <%= f.number_field :price, id: :product_price, step: 0.01, class: "form-control" %>
           </div>
           <div class="col-md-4">
-            <%= form.label :shipping_cost, class: "pt-1 font-weight-bold" %>
-            <%= form.number_field :shipping_cost, id: :product_shipping_cost, step: 0.01, class: "form-control" %>
+            <%= f.label :shipping_cost, class: "pt-1 font-weight-bold" %>
+            <%= f.number_field :shipping_cost, id: :product_shipping_cost, step: 0.01, class: "form-control" %>
           </div>
         </div>
 
 <hr>          
 <h4>Add the available color, sizes on hand for that color, and stock quantity for each size of your product. </h4>
-        <div>
-          <%= form.fields_for :color_variants do |builder| %>
+        <div align="center">
+          <%= f.fields_for :color_variants do |builder| %>
               <div class="row" align="center">
-                 <%= render 'color_variant_fields', form: builder %>             
+                 <%= render 'color_variant_fields', f: builder %>             
               </div>
 
           <% end %>
 
-          <%= link_to_add_fields "Add Color", form, :color_variants %>
+          <%= link_to_add_association "Add Color", f, :color_variants, :class => "btn", :style => "background-color: black; color: #D4AF37"  %>
         </div>
 
-          <div>
-          <%= form.fields_for :size_variants do |builder| %>
+          <div align="center">
+          <%= f.fields_for :size_variants do |builder| %>
               <div class="row" align="center">
-                 <%= render 'size_variant_fields', form: builder %>             
+                 <%= render 'size_variant_fields', f: builder %>             
               </div>
 
           <% end %>
 
-          <%= link_to_add_fields "Add size", form, :size_variants %>
+          <%= link_to_add_association "Add size", f, :size_variants, :class => "btn", :style => "background-color: black; color: #D4AF37" %>
         </div>
 
         
@@ -96,7 +96,7 @@
         
 
         <div class="row" align="center">
-          <%= form.submit :class => "btn", :style => "background-color: black; color: #D4AF37" %>
+          <%= f.submit :class => "btn", :style => "background-color: black; color: #D4AF37" %>
         </div>
       
       </div>
