--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -14,20 +14,27 @@
 
   <div class="col-md-6" style="background-color: #D4AF37; padding: 20px; border-radius: 10px; color: black;" align="center">
     
-    <p style="font-size: 25px"><em>Color:</em> <%= @product.color %></p>
+
     <p style="font-size: 25px"><em>Condition:</em> <%= @product.condition %></p>
     <div style="background-color: black; padding: 4%; margin: 2%; border-radius: 10px;">
           <p style="font-size: 25px; color: #D4AF37"><em>Description:</em> <%= @product.description %></p>
     </div>
 
-    <div>
-      <%= @product.color_variants.each do |color_variant| %>
-          <%= color_variant.try(:color) %>
+ 
+    <div align="left">
+      <h4> Colors Avalible </h4> 
+      <% @product.color_variants.each do |color_variant| %>
           <ul>
-            <% color_variant.size_variants.each do |size_variant| %>
-              <li><%= size_variant.try(:size) %></li>
-              <li><%= size_variant.try(:quantity) %></li>
-            <% end %>
+            <li><%= color_variant.color %></li>
+          </ul>
+      <% end %>
+    </div>
+
+    <div align="left">
+       <h4> Sizes Avalible </h4> 
+      <% @product.size_variants.each do |size_variant| %>
+          <ul>
+            <li><%= size_variant.size %></li>
           </ul>
       <% end %>
     </div>
