--- a/app/views/orders/purchases.html.erb
+++ b/app/views/orders/purchases.html.erb
@@ -8,6 +8,8 @@
     <th class="center">Item</th>
     <th class="center">Price</th>
     <th class="center">Seller</th>
+    <th class="center">Color</th>
+    <th class="center">Size</th>
     <th class="center">Date Purchased</th>
   </tr>
 
@@ -17,6 +19,8 @@
       <td class="center"><%= order.product.title %></td>
       <td class="center"><%= number_to_currency(order.product.price) %></td>
       <td class="center"><%= order.seller.username %> Email: <%= order.seller.email %></td>
+      <td class="center"><%= order.color %></td>
+      <td class="center"><%= order.size %></td>
       <td class="center"><%= order.created_at.strftime("%B %-d, %Y") %></td>
     </tr>
   <% end %>
