--- a/app/views/products/_form_new.html.erb
+++ b/app/views/products/_form_new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12" align="center" style="background-color: #D4AF37; color: black; border-radius: 10px; padding: 20px">
-      <%= form_for @product, url: "#{products_path}", html: { multipart: true } do |f| %>
+      <%= simple_form_for @product, url: "#{products_path}", html: { multipart: true } do |f| %>
       
         <% if product.errors.any? %>
           <div id="error_explanation">
@@ -48,18 +48,18 @@
           </div>
           <div class="col-md-4">
             <%= f.label :price, class: "pt-1 font-weight-bold" %>
-            <%= f.number_field :price, id: :product_price, step: 0.01, class: "form-control" %>
+            <%= f.number_field :price, id: :product_price, min: 1, step: 0.01, class: "form-control" %>
           </div>
           <div class="col-md-4">
             <%= f.label :shipping_cost, class: "pt-1 font-weight-bold" %>
-            <%= f.number_field :shipping_cost, id: :product_shipping_cost, step: 0.01, class: "form-control" %>
+            <%= f.number_field :shipping_cost, id: :product_shipping_cost, min: 1, step: 0.01, class: "form-control" %>
           </div>
         </div>
 
 <hr>          
 <h4>Add the available color, sizes on hand for that color, and stock quantity for each size of your product. </h4>
         <div align="center">
-          <%= f.fields_for :color_variants do |builder| %>
+          <%= f.simple_fields_for :color_variants do |builder| %>
               <div class="row" align="center">
                  <%= render 'color_variant_fields', f: builder %>             
               </div>
@@ -70,7 +70,7 @@
         </div>
 
           <div align="center">
-          <%= f.fields_for :size_variants do |builder| %>
+          <%= f.simple_fields_for :size_variants do |builder| %>
               <div class="row" align="center">
                  <%= render 'size_variant_fields', f: builder %>             
               </div>
